<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUp"
    android:background="@color/black">

    <TextView
        android:id="@+id/mainHeadingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headingBody"
        android:text="@string/sign_up"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/userNameTv"
        style="@style/textBody"
        android:text="@string/username_heading"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainHeadingTv" />
    <EditText
        android:id="@+id/userNameEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameTv"
        android:hint="@string/hint_name"
        android:textCursorDrawable="@null"
        android:background="@drawable/edit_text_background"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/passwordTv"
        style="@style/textBody"
        android:text="@string/password_heading"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameEt"/>
    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTv"
        android:hint="@string/hint_password"
        android:textCursorDrawable="@null"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/emailTv"
        style="@style/textBody"
        android:text="@string/email_heading"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEt" />
    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTv"
        android:hint="@string/hint_email"
        android:textCursorDrawable="@null"
        android:background="@drawable/edit_text_background"
        android:inputType="textEmailAddress"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyBt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        style="@style/textBody"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEt"
        />
</androidx.constraintlayout.widget.ConstraintLayout>